<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#DDD"
   >
  
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" 
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        >
		<ToggleButton
	        android:id="@+id/toggleButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="10dp"
	        android:height="50dp"
	        android:text="ToggleButton"
	        android:textOff="Start Service"
	        android:textOn="Stop Service"
	        android:width="200dp" />
        
    </LinearLayout>

   
    
<!--     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="fill_parent" -->
<!--     android:layout_height="wrap_content" -->
<!--     android:orientation="horizontal"  -->
<!--     android:layout_marginTop="5dp"> -->
    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_label_avg_acc" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text="@string/label_avg_acc" /> -->
	    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_avg_acc" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text=" - " /> -->
    
<!--     </LinearLayout> -->
    
    
<!--     <LinearLayout -->
<!--         xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="10dp" -->
<!--         android:orientation="horizontal" > -->
    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_label_avg_gyr" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text="@string/label_avg_gyr" /> -->
	    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_avg_gyr" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text=" - " /> -->
    
<!--     </LinearLayout> -->
    
        
<!--     <LinearLayout -->
<!--         xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="10dp" -->
<!--         android:orientation="horizontal" > -->
    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_label_stato_moto" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text="@string/label_stato_moto" /> -->
	    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_stato_moto" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text=" - " /> -->
    
<!--     </LinearLayout> -->
    
        
<!--     <LinearLayout -->
<!--         xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginTop="10dp" -->
<!--         android:orientation="horizontal" > -->
    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_label_stato_uso" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text="@string/label_stato_uso" /> -->
	    
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/tw_stato_uso" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text=" - " /> -->
    
<!--     </LinearLayout> -->
	
	
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#aaa"
    android:layout_margin = "10dp"
   	>
		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginBottom="5dp"
    android:layout_margin="10dp"
    >
    
	    <TextView
	        android:id="@+id/tw_label_GPS_status"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_GPS_status"
	        android:textColor="#000"
	        android:textStyle="bold"  />
	    
	    <TextView
	        android:id="@+id/tw_GPS_status"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" - " 
        android:textColor="#000"
       />
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp">
    
	    <TextView
	        android:id="@+id/tw_label_location_provider"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_location_provider" 
	        android:textColor="#000"
	        android:textStyle="bold" />
	    
	    <TextView
	        android:id="@+id/tw_LocationProvider"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" - " 
        android:textColor="#000"
         />
    
    </LinearLayout>
    
     <TextView
        android:id="@+id/tw_label_posizione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_posizione" 
    	android:layout_marginLeft="10dp"
        android:textColor="#000"
        android:textStyle="bold" />
     
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginLeft="30dp"
    >
    
	    <TextView
	        android:id="@+id/tw_label_posizione_lat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_posizione_lat" 
        	android:textColor="#000"
        />
	    
	    <TextView
	        android:id="@+id/tw_posizione_lat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" - " 
       		android:textColor="#000"
         />
    
    </LinearLayout>
    
        
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginLeft="30dp"
    >
    
	    <TextView
	        android:id="@+id/tw_label_posizione_long"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_posizione_long" 
	        android:textColor="#000"/>
	    
	    <TextView
	        android:id="@+id/tw_posizione_long"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" - " 
	        android:textColor="#000"/>
    
    </LinearLayout>
   
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginLeft="30dp"
    >
    
	    <TextView
	        android:id="@+id/tw_label_accuratezza"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_accuratezza" 
	        android:textColor="#000"/>
	    
	    <TextView
	        android:id="@+id/tw_accuratezza"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" - " 
	        android:textColor="#000"/>
    
    </LinearLayout>
         
        
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" 
   		android:layout_marginLeft="10dp"
   		android:layout_marginBottom="20dp">
    
	    <TextView
	        android:id="@+id/tw_label_velocita"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_velocita"
	        android:textColor="#000"
	        android:textStyle="bold"  
	        />
	    
	    <TextView
	        android:id="@+id/tw_velocita"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=" - " 
	        android:textColor="#000"/>
    
    </LinearLayout>
   
	</LinearLayout>
	
	 <ToggleButton
	        android:id="@+id/toggleButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:height="50dp"
	        android:text="Messaggi"
	        android:textOff="Attiva messaggi a Server"
	        android:textOn="Disattiva messaggi a Server"
	        android:width="220dp" />
	<ToggleButton
	        android:id="@+id/toggleButton3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="10dp"
	        android:height="50dp"
	        android:text="Voce"
	        android:textOff="Attiva sintet. vocale"
	        android:textOn="Disattiva sintet. vocale"
	        android:width="220dp" />
</LinearLayout>